[project]
dynamic = ["version", "readme"]
name = "yaxmldiff"
description = "yaxmldiff is Yet Another XML Differ"
requires-python = ">= 3.8"
authors = [
  {name = "Lukas Atkinson", email = "opensource@LukasAtkinson.de"}
]
license = {text = "Apache-2.0"}
keywords = ["xml", "diff"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Testing",
  "Topic :: Text Processing :: Markup :: XML",
]
dependencies = [
  "lxml",
]

[project.urls]
"Homepage"      = "https://github.com/latk/yaxmldiff.py"
"Github"        = "https://github.com/latk/yaxmldiff.py"
"Issue Tracker" = "https://github.com/latk/yaxmldiff.py/issues"

[tool.setuptools.dynamic]
version = {attr = "yaxmldiff.__version__"}
readme = {file = ["README.md", "CHANGELOG.md"], content-type = "text/markdown"}

[tool.uv]
dev-dependencies = [
    "lxml-stubs>=0.5.1",
    "mypy>=1.11.2",
    "nox>=2024.4.15",
    "ruff>=0.6.8",
]

[build-backend]
required = ['setuptools >= 61.0']
build-backend = "setuptools.build_meta"

[tool.mypy]
disallow_untyped_defs = true
pretty = true

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # bugbear
  "C90",  # mccabe
  "N",  # naming
  "C4",  # comprehensions
  "PYI",  # types
  "RET",  # return statements
  "SIM",  # possible simplifications
  "PL",  # pylint
  "TRY",  # exception handling
  "RUF",
  # "D", # docstyle  TODO enable
  # "UP",  # upgrade  TODO enable
  "ANN",  # type annotations  TODO enable
  "S",  # bandit TODO enable
]
ignore = [
  "E501",  # line length is decided by the formatter
  "S101",  # allow asserts
  "ANN101", "ANN102",  # don't require annotation on self
]
