[project]
name = "yaxmldiff"
version = "0.1.0"
description = "yaxmldiff is Yet Another XML Differ"
dynamic = ["readme"]
requires-python = ">= 3.8"
authors = [
  {name = "Lukas Atkinson", email = "opensource@LukasAtkinson.de"}
]
license = {text = "Apache-2.0"}
keywords = ["xml", "diff"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Testing",
  "Topic :: Text Processing :: Markup :: XML",
]
dependencies = [
  "lxml>=3",  # not entirely sure what an appropriate constraint would be
]

[project.urls]
"GitHub"        = "https://github.com/latk/yaxmldiff.py"
"Issue Tracker" = "https://github.com/latk/yaxmldiff.py/issues"

[tool.uv]
dev-dependencies = [
    "lxml-stubs~=0.5.1",
    "mypy~=1.11.2",
    "nox~=2024.4.15",
    "ruff~=0.6.8",
]

[build-system]
requires = ["hatchling>=1.11", "hatch-fancy-pypi-readme>=24.1.0"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [
  { path = "README.md" },
  { text = "\n\n" },
  { path = "CHANGELOG.md" },
]

[tool.mypy]
disallow_untyped_defs = true
pretty = true

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # bugbear
  "C90",  # mccabe
  "N",  # naming
  "C4",  # comprehensions
  "PYI",  # types
  "RET",  # return statements
  "SIM",  # possible simplifications
  "PL",  # pylint
  "TRY",  # exception handling
  "RUF",
  # "D", # docstyle  TODO enable
  # "UP",  # upgrade  TODO enable
  "ANN",  # type annotations  TODO enable
  "S",  # bandit TODO enable
]
ignore = [
  "E501",  # line length is decided by the formatter
  "S101",  # allow asserts
  "ANN101", "ANN102",  # don't require annotation on self
]
