[metadata]
name = yaxmldiff
version = attr: yaxmldiff.__version__

description = yaxmldiff is Yet Another XML Differ
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown

license = Apache-2.0
license_file = LICENSE.txt

author = Lukas Atkinson
author_email = opensource@LukasAtkinson.de

url = https://github.com/latk/yaxmldiff.py
project_urls =
  Github        = https://github.com/latk/yaxmldiff.py
  Issue Tracker = https://github.com/latk/yaxmldiff.py/issues

classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  License :: OSI Approved :: Apache Software License
  Programming Language:: Python :: 3
  Programming Language:: Python :: 3.6
  Programming Language:: Python :: 3.7
  Programming Language:: Python :: 3.8
  Programming Language:: Python :: 3.9
  Topic :: Software Development :: Testing
  Topic :: Text Processing :: Markup :: XML

[options]
py_modules =
  yaxmldiff
python_requires = >=3.6
install_requires =
  lxml

[flake8]
ignore =
  # line length is enforced by black
  E501
exclude =
  .git,
  .nox,
  __pycache__,
  build,
  dist,
  venv,

[pylint.messages control]
disable =
  missing-class-docstring,
  missing-function-docstring,

[pylint]
extension-pkg-whitelist =
  lxml.etree,

[mypy]
disallow_untyped_defs = True
pretty = True
